# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("base/config.gni")

group("hiprofiler_targets") {
  deps = [
    "cmds:hiprofiler_cmd",
    "plugins/api:hiprofiler_plugins",
    "plugins/bytrace_plugin:bytraceplugin",
    "plugins/cpu_plugin:cpudataplugin",
    "plugins/cpu_plugin:cpudataplugintest",
    "plugins/memory_plugin:memdataplugin",
    "services/profiler_service:hiprofilerd",
    "services/shared_memory:shared_memory",
  ]
}

group("unittest") {
  testonly = true
  deps = [
    "base/test:unittest",
    "plugins/api/test:unittest",
    "plugins/cpu_plugin/test:unittest",
    "plugins/memory_plugin/test:unittest",
    "services/ipc/test:unittest",
    "services/plugin_service/test:unittest",
    "services/profiler_service/test:unittest",
    "services/shared_memory/test:unittest",
  ]
}
