# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../build/config.gni")

subsys_name = OHOS_PROFILER_SUBSYS_NAME
subsys_x64_out = "clang_x64/$subsys_name/$subsys_name"
libc_dir_proto = rebase_path("$asdk_libs_dir", "//")
root_output_dir_proto = rebase_path("$root_out_dir", "//")
# print("grpc_cpp_plugin = ", grpc_cpp_plugin)
# print("ipc_cpp_plugin = ", ipc_cpp_plugin)
# print("root_build_dir = ", root_build_dir)
# print("root_out_dir = ", root_out_dir)
# print("root_gen_dir = ", root_gen_dir)
