# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")

lite_component("app") {
    features = [
       #"my_first_app:myapp",
       #"mqtt_test:mqtt_test",
       #"led_demo:led_demo",
       #"adc_key:adc_key",
       #"iothardware:iothardwarec",
       # "iothardware:aht20",
       # "aht20_test:Aht20Test",
       #"ssd1306:app",
       #"demo_wifi_sta:demo_wifi_sta",
       #"myparty_demo:myparty_demo",        
       #"wifi_core_demo:wifi_core_demo",
       #"day08_mqtt:day08_mqtt",
       "day08_mqtt_new:day08_mqtt_new",

    ]
}
