# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

OHOS_PROTO_DIR = ""

if (target_os == "linux" || target_os == "windows") {
  OHOS_FTRACE_PROTO_DIR = "//third_party/protogen"
  OHOS_MEMORY_PROTO_DIR = "//third_party/protogen"
  OHOS_PROTO_GEN = "//third_party/protogen/gen"
  OHOS_SERVICE_PROTO_DIR = "//third_party/protogen"
} else {
  OHOS_FTRACE_PROTO_DIR =
      "//developtools/profiler/protos/types/plugins/ftrace_data"
  OHOS_MEMORY_PROTO_DIR =
      "//developtools/profiler/protos/types/plugins/memory_data"
  OHOS_SERVICE_PROTO_DIR = "//developtools/profiler/protos/services"
  OHOS_PROTO_GEN = "//out/aosp-arm-release/gen/cpp/developtools/profiler/protos"
}
enable_ts_utest = true
